--- a/css/index.css
+++ b/css/index.css
@@ -17,41 +17,34 @@
 body {
     font-family: 'Open Sans', sans-serif;
     position: relative;
-    min-height: 2000px;
-
 }
 
 .container {
-    width: 100%;
+    width: auto;
     height: 100%;
-    max-width: 1400px;
-    margin: 0 auto;
-
 }
 
-
-
 .nav {
+    width: 100%;
     height: 50px;
     background-color: transparent;
     background-size: cover;
     background-position: center;
-    padding: 8px 10px;
     position: absolute;
-    top: 0;
+    top: 18px;
     left: 0;
     right: 0;
     z-index: 1;
-
 }
-
 
 .nav__list {
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 90%;
+    height: 60px;
     list-style: none;
-    align-items: flex-end;
-    align-content: center;
 }
 
 
@@ -59,22 +52,18 @@ body {
     color: #fff;
     font-weight: 200;
     text-decoration: none;
-    margin: 3px 2px;
-    transform: translateY(20%);
-    transition: transform .6s
+    transition: all 600ms linear;
 }
 
 .nav__link:hover {
-    border-bottom: 3px solid #7c9bf1;
+    border-bottom: 1px solid #7c9bf1;
     color: var(--color);
-    transform: translate(0)
 }
 
-.nav__link {
-    color: var(--color);
+
+.nav__img {
     display: flex;
     align-items: center;
-
 }
 
 .menu_vertical {
@@ -82,18 +71,31 @@ body {
     display: none;
     list-style: none;
     width: 200px;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: var(--color);
+
+}
+
+.nav__list .menu_vertical li {
+    color: white;
+}
+
+.nav__list .menu_vertical li a {
+    color: black;
 
 }
 
 .nav__list li:hover .menu_vertical {
     display: block;
-
-
+    position: absolute;
 }
 
 .menu_vertical li:hover {
     background-color: #0d1821;
+    transition: all 500ms ease-in-out;
+}
+
+.menu_vertical li:hover a {
+    color: white;
 }
 
 .menu_vertical li a {
@@ -102,6 +104,7 @@ body {
     padding: 15px 15px 20px;
     text-decoration: none;
 }
+
 
 .main {
     background-image: linear-gradient(#00000055, #090909eb), url('../img/jessica-felicio-nIKCy5CWIzk-unsplash.jpg');
@@ -384,7 +387,7 @@ body {
 .pie_pagina__container {
     background-color: var(--nav-footer);
     ;
-    width: 1400px;
+    width: 100%;
     height: 420px;
     margin: 1px auto;
     display: flex;
